@@ -38,12 +38,6 @@ INCLUDES = \
 
 
 
-<!-- ##### VARIABLE g_log_domain_glib ##### -->
-<para>
-The log domain used for messages logged by GLib itself.
-</para>
-
-
 <!-- ##### MACRO G_LOG_FATAL_MASK ##### -->
 <para>
 GLib log levels that are considered fatal by default.
