@@ -25,6 +25,12 @@ g_pattern_spec_new() and use g_pattern_match_string() instead of
 g_pattern_match_simple().  This avoids the overhead of repeated 
 pattern compilation.
 
+<!-- ##### SECTION See_Also ##### -->
+<para>
+
+</para>
+
+
 <!-- ##### STRUCT GPatternSpec ##### -->
 <para>
 A <structname>GPatternSpec</structname> is the 'compiled' form of a pattern.
